--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,65 +1,97 @@
-#container{
-    width: 936px;
-    display: flex;
-    margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
-    border: 2px solid #000;
+#container {
+  width: 936px;
+  display: flex;
+  margin-left: 124px;
+  margin-top: 150px;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 2px solid #000;
+  opacity: 0.75;
 }
 
-#left{
-    width: 240px;
-    background-color: #f2f2f2;
-    height: 335px;
-    border: 2px solid #000;
+#left {
+  width: 240px;
+  background-color: #f2f2f2;
+  height: 335px;
+  border: 2px solid #000;
 }
 
 #middle {
-    width: 568px;
-    height: 339px;
-    background-color: rgb(0, 0, 106);
-    padding: 35px;
-    box-sizing: border-box;
-    border: 2px solid #000;
+  width: 568px;
+  height: 339px;
+  background-color: rgb(0, 0, 106);
+  padding: 35px;
+  box-sizing: border-box;
+  border: 2px solid #000;
 }
 
-#right{
-    width:128px;
-    height: 335px;
-    background-color: rgb(0, 0, 106);
-    border: 2px solid #000;
+#right {
+  width: 128px;
+  height: 335px;
+  background-color: rgb(0, 0, 106);
+  border: 2px solid #000;
 }
 
-#vierkant{
-    width: 90px;
-    height: 90px;
-    margin-left: 20px;
-    margin-top: 20px;
-    background-color: white;
+#grootWitVierkant {
+  position: relative;
+  width: 94px;
+  height: 94px;
+  margin-left: 18px;
+  margin-top: 31px;
+  background-color: white;
 }
 
-#vierkant2{
-    width: 20px;
-    height:20px;
-    background: rgb(0, 0, 106);
-    margin-top:0px;
-    margin-left:0px;
-    display: inline-block;
+#kleinBlauwVierkantje {
+  width: 20px;
+  height: 20px;
+  background: rgb(0, 0, 106);
+  margin-top: 0px;
+  margin-left: 0px;
+  display: inline-block;
 }
 
-#spoor{
-    font-size: 8px;
-    display: inline-block;
-    color: rgb(0, 0, 106);
+#spoor {
+  font-size: 10px;
+  display: inline-block;
+  color: rgb(0, 0, 106);
+  margin-left: -2px;
 }
 
-#id18{
-    font-size: 50px;
-    display: inline-block;    
-    color: rgb(0, 0, 106);
+#id18 {
+  font-size: 65px;
+  display: inline-block;
+  color: rgb(0, 0, 106);
+  font-weight: bold;
+  letter-spacing: -4px;
 }
 
-#b{
-    font-size: 16px;
-    display: inline-block;    
-    color: rgb(0, 0, 106);
+#b {
+  position: absolute;
+  top: 34px;
+  left: 66px;
+  font-size: 30px;
+  font-weight: bold;
+  display: inline-block;
+  color: rgb(0, 0, 106);
+}
+
+body {
+  background-image: url("../img/treinbord.webp");
+}
+
+#grootVierkantInHetMidden {
+  width: 475px;
+  height: 245px;
+  margin-top: -8px;
+  margin-left: 4px;
+  background: white;
+}
+
+#intercity {
+  position: absolute;
+  top: 180px;
+  left: 658px;
+  font-size: 38px;
+  font-weight: bold;
+  color: rgb(0, 0, 106);
+  font-family: Arial, Helvetica, sans-serif;
 }
