--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,20 @@ body {
   color: rgb(0, 0, 106);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#Heerlen {
+  position: absolute;
+  top: 220px;
+  left: 427px;
+  font-size: 44px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.cirkel{
+  width:200px;
+  height:200px;
+  background-color: red;
+  border-radius:100px;
+  margin-top:20px;
+  margin-left:20px;
+}
